WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34937
WebGtk GLib-CRITICAL Segmentation fault
https://bugs.webkit.org/show_bug.cgi?id=34937
Summary
WebGtk GLib-CRITICAL Segmentation fault
Peter Hilbers
Reported
2010-02-15 04:08:34 PST
I compiled a new version of WebGtk because midori(immediately) and epiphany(shortly after start) are crashing. When running the GtkLauncher: WebKit-
r54749
$ Programs/GtkLauncher (GtkLauncher:10188): GLib-CRITICAL **: g_strsplit: assertion `string != NULL' failed Segmentation fault From midori debugging with gdb it turns out that in the WebCore::PluginPackage::fetchInfo (this=0xb680c1c0) line 71 fails. I suspect that mimeDescs[i][0] is causing the segmentation fault.
Attachments
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2010-04-08 01:49:07 PDT
What plugins are you using? The fix for this seems trivial but it would be nice to have some kind of test for it.
Xan Lopez
Comment 2
2010-04-09 07:02:15 PDT
I've pushed
r57338
fixing this, thanks for the report.
Peter Hilbers
Comment 3
2010-04-10 03:37:57 PDT
(In reply to
comment #2
)
> I've pushed
r57338
fixing this, thanks for the report.
Thanks for your effort! I will soon test it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug