2010-04-09  Xan Lopez  <xlopez@igalia.com>

Reviewed by Gustavo Noronha.

        WebGtk GLib-CRITICAL Segmentation fault
        https://bugs.webkit.org/show_bug.cgi?id=34937

        Do not crash if a plugin does not return anything in
        NP_GetMIMEDescription. This can happen, and other ports gracefully
        handle the situation.

        * plugins/gtk/PluginPackageGtk.cpp:
        (WebCore::PluginPackage::fetchInfo):

Canonical link: https://commits.webkit.org/48630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57338 268f45cc-cd09-0410-ab3c-d52691b4dbfc